objects/Additional_Vehicles__c.object
<CustomObject>
    <description>This object is to store additional vehicle details.</description>
    <label>Additional Vehicles</label>
    <nameField>
        <displayFormat>AV-{00000000}</displayFormat>
        <label>Additional Vehicles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Vehicles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Through this field we can relate additional vehicle to specific order.</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Additional Vehicles</relationshipLabel>
        <relationshipName>Additional_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>This field is used to calculate the total Revenue of the Added vehicle on opportunity object</description>
        <label>Revenue (£)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Through this Brand field user can chose which  brand car  user have selected to buy.</description>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Vehicle_Manufacturer__c.Name</field>
                <operation>equals</operation>
                <value>Jaguar,Land Rover,Daimler</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Manufacturer__c</referenceTo>
        <relationshipLabel>Additional Vehicles</relationshipLabel>
        <relationshipName>Additional_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Through this  field user can select which model  car user want to buy from this lookup field.</description>
        <label>Model</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Selected Model doesn&apos;t belong to the Brand</errorMessage>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Manufacturer__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Brand__c</valueField>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Is_JLR_Classic__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Is_Available_SVO__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Model__c</referenceTo>
        <relationshipLabel>Additional Vehicles</relationshipLabel>
        <relationshipName>Additional_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <description>This field is used to calculate the total Cost Price of the Added vehicle on opportunity object.</description>
        <label>Cost Price (£)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>This field is used to calculate the total List Price of the Added vehicle on opportunity object.</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Through this Vehicle field user can chose which vehicle user have selected to buy.</description>
        <label>Vehicle</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6)</booleanFilter>
            <filterItems>
                <field>$Source.SO_Brand__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>Asset.SO_Brand__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Brand__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.SO_Series_Name__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>Asset.SO_Series_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Series_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.SO_Model__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>Asset.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Model__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Additional Vehicles</relationshipLabel>
        <relationshipName>Additional_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Through this field we can relate additional vehicle to specific opportunity.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Additional Vehicles</relationshipLabel>
        <relationshipName>Additional_Vehicles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contribution__c</fullName>
        <description>This field is used to calculate the total Contribution of the Added vehicle on opportunity object.</description>
        <label>Contribution (£)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_Tracker_ID__c</fullName>
        <description>This field is used to capture E-tracker ID.</description>
        <label>E-Tracker ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <description>This field is used to calculate the total retail price of the Added vehicle on opportunity object.</description>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_Tracker_URL__c</fullName>
        <description>This field is used to capture E-tracker URL.</description>
        <label>E-Tracker URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SO_Derivative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Derivative</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Derivative doesn&apos;t belong to the Series</errorMessage>
            <filterItems>
                <field>SO_Vehicle_Derivative__c.SO_Vehicle_Series__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Series_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Derivative__c</referenceTo>
        <relationshipLabel>Additional Vehicles</relationshipLabel>
        <relationshipName>Additional_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Model_Year__c</fullName>
        <description>Through this picklist field user can select which model year car user want to buy .</description>
        <label>Model Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>19MY</fullName>
                </value>
                <value>
                    <fullName>20MY</fullName>
                </value>
                <value>
                    <fullName>21MY</fullName>
                </value>
                <value>
                    <fullName>22MY</fullName>
                </value>
                <value>
                    <fullName>23MY</fullName>
                </value>
                <value>
                    <fullName>24MY</fullName>
                </value>
                <value>
                    <fullName>25MY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Wheel_Base__c</fullName>
        <description>Through this field user can select wheel base like Standard or long wheel base.</description>
        <label>Wheel Base</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Wheelbase</fullName>
                </value>
                <value>
                    <fullName>Long Wheelbase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Series_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Through this Series Name field user can chose which Series Name user have selected to buy.</description>
        <label>Series Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Series is not valid for the selected Model.</errorMessage>
            <filterItems>
                <field>$Source.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>SO_Vehicle_Series__c.SO_Model__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Series__c</referenceTo>
        <relationshipLabel>Additional Vehicles</relationshipLabel>
        <relationshipName>Additional_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Hand_of_Drive__c</fullName>
        <description>Through this field user can select hand of drive like right hand driver or left hand driver.</description>
        <label>Hand of Drive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LHD</fullName>
                </value>
                <value>
                    <fullName>RHD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Common_Order_Number__c</fullName>
        <description>This field used to capture common order number.</description>
        <label>Common Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Tracker_Created_Date__c</fullName>
        <description>This field used to capture e-tracker created date.</description>
        <label>E-Tracker Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_Tracker_Accepted_Date__c</fullName>
        <description>This field is used to capture E-tacker accepted date.</description>
        <label>E-Tracker Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donor_Specification_Sent_Date__c</fullName>
        <description>This field is capturing  Donor Specification  sent Date.</description>
        <label>Donor Specification Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donor_Specification_Created_Date__c</fullName>
        <description>This field is capturing  Donor Specification  Created Date.</description>
        <label>Donor Specification Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donor_Specification_Correct_in_VISTA__c</fullName>
        <description>Through this Donor Specification Correct in VISTA? field we are checking  Donor Specification is correct or not in vista.</description>
        <label>Donor Specification Correct in VISTA?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Restriction_on_record_creation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW()&amp;&amp;ISPICKVAL(Opportunity__r.Proceed_with_Quote__r.Status,&apos;Outcome&apos;) &amp;&amp; ISPICKVAL( Opportunity__r.Proceed_with_Quote__r.SO_Outcome__c,&apos;Accepted&apos;)</errorConditionFormula>
        <errorMessage>You cannot add a new vehicle as Quote is already Accepted .</errorMessage>
    </validationRules>
</CustomObject>